--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
+    "@remix-run/dev": "^2.17.1",
     "@shopify/hydrogen": "2025.7.0",
+    "@shopify/remix-oxygen": "^3.0.1",
+    "@tailwindcss/vite": "^4.1.13",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^5.1.22",
+    "lucide-react": "^0.544.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router": "7.9.2",
-    "react-router-dom": "7.9.2",
-    "tailwindcss": "^4.1.6"
+    "react-router-dom": "7.9.2"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
@@ -36,13 +39,14 @@
     "@shopify/mini-oxygen": "^4.0.0",
     "@shopify/oxygen-workers-types": "^4.1.6",
     "@shopify/prettier-config": "^1.1.2",
-    "@tailwindcss/vite": "^4.1.6",
+    "@tailwindcss/postcss": "^4.1.13",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/eslint": "^9.6.1",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-import-resolver-typescript": "^3.7.0",
@@ -53,7 +57,9 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "globals": "^15.14.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.4.2",
+    "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
     "vite": "^6.2.4",
     "vite-tsconfig-paths": "^4.3.1"
