--- a/package.json
+++ b/package.json
@@ -14,18 +14,24 @@
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
+    "@react-three/drei": "^9.97.0",
+    "@react-three/fiber": "^8.15.15",
     "@remix-run/dev": "^2.17.1",
     "@shopify/hydrogen": "2025.7.0",
     "@shopify/remix-oxygen": "^3.0.1",
     "@tailwindcss/vite": "^4.1.13",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^5.1.22",
+    "leva": "^0.10.0",
     "lucide-react": "^0.544.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router": "7.9.2",
-    "react-router-dom": "7.9.2"
+    "react-router-dom": "7.9.2",
+    "three": "^0.158.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
